       PR tree-optimization/23115        * tree-if-conv.c (find_phi_replacement_condition): Check domninated_by        relation.

* gcc.dg/tree-ssa/pr23115.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106653 138bc75d-0d04-0410-961f-82ee72b054a4